# BMSTU

./: README.md
Algorithms and Data Structures/Module 1/: binsearch.c  concat.c  elem.h  fibstr.c  fibsys.c  frame.c  intersect.c  maxarray.c  maxk.c  mulmod.c  peak.c  permut.c  polynom.c  primediv.c  revarray.c  saddlepoint.c  searchlist.c  strdiff.c  wcount.c
Algorithms and Data Structures/Module 2/: bmall.c  bubblesort.c  csort.c  datesort.c  dsort.c  hsort.c  kmpall.c  maxprod.c  mergesort.c  power2.c  prefixes.c  pword.c  quicksort.c  radixsort.c  rangegcd.c  rangemax.c  rangepeak.c  shellsort.c
Algorithms and Data Structures/Module 3/: circbuf.c  cluster.c  disparray.c  listbsort.c  listisort.c  merge.c  qmax.c  qsstack.c  (+2 more)
Algorithms of bioinformatics/: lab0.py
Computer Graphics/: lab1.py  lab1b.py  lab2_Ivanov.py  lab4_Ivanov.py  lab5_Ivanov.py  lab6_Ivanov.py  lab7_Ivanov.py  lab7_Ivanov.xls
Computer Graphics/Lab8/: CMakeLists.txt  Cube.hpp  Point.hpp  Shader.cpp  Shader.hpp  Spiral3d.cpp  Spiral3d.hpp  a.out  fragment_shader.glsl  main.cpp  vertex_shader.glsl
Databases/: lab10(1).sql  lab10(create).sql  lab10.sql  lab11.sql  lab12.sql  lab13.sql  lab14.sql  lab15.sql  lab5.sql  lab6(1).sql  lab6.sql  lab7.sql  lab8.sql  lab9.sql
Low-level programming/: Lab1.asm  Lab2.asm  Lab3.asm  Lab4.asm  Lab4b.asm  Lab5.asm  Lab6.asm  Lab6a.asm  Lab7.asm  Lab7a.asm  Lab7b.asm  Lab7c.asm
Numerical methods of linear algebra/: main.py
Theory of formal languages/: IU9-52-06-0-Ivanov.docx  IU9-52-06-1-Ivanov.docx  IU9-52-06-2-Ivanov.docx  IU9-52-06-3-Ivanov.docx
(+496 files in other folders)
